--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,8 @@
     "tag": "Full Stack Project",
     "image": "/projects/vox.png",
     "description": "Enriched with Responsiveness, Title Prediction, Streaming Responses, History, Advanced Authentications, Temporary Chat and more.",
-    "techStack": "Built with Next.js, Redux, PostgreSQL, Tailwind, Redis, JWT, GitHub Actions (CI/CD), and Docker."
+    "techStack": "Built with Next.js, Redux, PostgreSQL, Tailwind, Redis, JWT, GitHub Actions (CI/CD), and Docker.",
+    "gradient": "from-teal-600 to-blue-800"
   },
   {
     "id": 2,
@@ -13,6 +14,16 @@
     "tag": "AI + Healthcare",
     "image": "/projects/medichoice.png",
     "description": "AI-powered clinic management app with doctor suggestions, appointment booking, and advanced search.",
-    "techStack": "Built with Next.js, NestJS, PostgreSQL, Tailwind, Prisma, and Gemini API."
+    "techStack": "Built with Next.js, NestJS, PostgreSQL, Tailwind, Prisma, and Gemini API.",
+    "gradient": "from-purple-700 to-indigo-900"
+  },
+  {
+    "id": 3,
+    "title": "CollabTask",
+    "tag": "Project Management",
+    "image": "/projects/collabtask.png",
+    "description": "Created a project management platform enabling task assignment, file submissions, and audit tracking. Implemented role-based permissions for admins and collaborators.",
+    "techStack": "Built with React (Vite), Node.js, Express.js, MongoDB, SCSS, and Passport.js.",
+    "gradient": "from-amber-600 to-rose-800"
   }
 ]
