feat: adjust responsive design and styling in project details page

--- a/src/data/projectDetails.json
+++ b/src/data/projectDetails.json
@@ -206,7 +206,7 @@
                 "Swagger"
             ],
             "github": "https://github.com/TarequeMahmud/gitcollab.io",
-            "live": "https://gitcollab-io.vercel.app"
+            "live": "https://git-collab-io.vercel.app"
         }
     ]
 }
